--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Docker Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/
+          file: ./src/Dockerfile
+          push: true
+          tags: |
+            guimap/rotten-potatos:latest
+            guimap/rotten-potatos:${{  github.run_number }}
+          
           
