--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 jobs:
-  build:
+  CI:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,5 +25,23 @@ jobs:
           tags: |
             guimap/rotten-potatos:latest
             guimap/rotten-potatos:${{  github.run_number }}
+            
+  CD:
+    runs-on: ubuntu-latest
+    needs: CI
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v1.1
+        with:
+          kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
           
-          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          image: guimap/rotten-potatos:${{  github.run_number }}
+          manifests:
+            kub/deployment.yaml
+  
+
